# RapidApps

./: pyproject.toml
.github/workflows/: ci-testing.yml
RapidCLI/: BUILD.bazel  app_loader.py  cli.py  config_registrar.py  exceptions.py  extension.py  extension_registrar.py  settings.py  utils.py
RapidCLI/rapid_admin/: cli_config.yml  rapid_admin.py
RapidCLI/rapid_admin/admin/: admin.py  app_config.yml
RapidCLI/rapid_admin/templates/rapidcli_cli_template/: cli.rpy
RapidCLI/tests/: BUILD.bazel  app_config.yml  cli_config.yml  cli_test_configs.py  config_tests.py  util_tests.py
