package(default_visibility = ["//moveworks/cse_tools:visibility"])

py_library(
    name = "__init__",
    srcs = ["__init__.py"],
)

py_library(
    name = "cli",
    srcs = ["cli.py"],
    deps = [
        ":app_loader",
        ":extension_registrar",
        ":settings",
        ":utils",
    ],
)

py_library(
    name = "config_registrar",
    srcs = ["config_registrar.py"],
    deps = [
        ":utils",
        "//moveworks/utils/config:yaml_config",
    ],
)

py_library(
    name = "extension",
    srcs = ["extension.py"],
    deps = [
        ":app_loader",
        ":config_registrar",
        ":utils",
    ],
)

py_library(
    name = "extension_registrar",
    srcs = ["extension_registrar.py"],
    deps = [
        ":extension",
        ":utils",
    ],
)

py_library(
    name = "utils",
    srcs = ["utils.py"],
    deps = [":settings"],
)

py_library(
    name = "app_loader",
    srcs = ["app_loader.py"],
    deps = [
        ":config_registrar",
        ":settings",
        ":utils",
    ],
)

py_library(
    name = "exceptions",
    srcs = ["exceptions.py"],
)

py_library(
    name = "settings",
    srcs = ["settings.py"],
)
